# mkAIDerivation

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  shell.nix
nix/: default.nix  overlay.nix
nix/mkAIDerivation/: default.nix
nix/pkgs/ai-drv-server/: default.nix
server/: README.md  pyproject.toml  run-server.py
server/ai_drv_server/: __init__.py  app.py  llm.py
